Sets Max height to singlePools to prevent taking too much margin on small pools

--- a/src/components/Platform/Platform.module.css
+++ b/src/components/Platform/Platform.module.css
@@ -66,9 +66,11 @@ input[type=number] {
 }
 :global(.slick-slider .slick-slide:not(.slick-active)) .singlePool{
     transform: scale(0.65);
+    max-height: 400px;
 }
 :global(.slick-slider .slick-slide.slick-active) .singlePool{
     transform: scale(1);
+    max-height: 10000px;
 }
 :global(.slick-current){
     box-sizing: border-box;
